fix spacing issues in main page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2400,7 +2400,7 @@ input, select, textarea {
 
 		.image.fit {
 			display: block;
-			margin: 0 0 2em 0;
+			margin: 0 0 0em 0;
 			width: 100%;
 		}
 
@@ -3894,7 +3894,7 @@ input, select, textarea {
 
 			#main > .posts > * {
 				padding: 8px;
-				width: 48%;
+				width: 48.5%;
 			}
 			
 			#main > .posts > article {
@@ -3917,14 +3917,12 @@ input, select, textarea {
 				}
 
 				#main > .posts > article:nth-child(2n -1) {
-					border-left-width: 0;
 					margin-right: auto;
   					margin-left: 0;
 
 				}
 
 				#main > .posts > article:nth-child(2n) {
-					border-top-width: 0;
 					margin-right: 0;
   					margin-left: auto;
 				}
